V1.5.1: Fix bug on animation displaying menus on firefox, adding spaces around minus sign in calc function + change -delay to 0

--- a/css/style.css
+++ b/css/style.css
@@ -674,41 +674,41 @@ h3 {
 
 .menu__category:nth-child(1) .menu__item:nth-child(1) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (1-1)*3*0.2s) + (1 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (1 - 1)*3*0.2s) + (1 - 1)*0.2s);
 }
 .menu__category:nth-child(1) .menu__item:nth-child(2) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (1-1)*3*0.2s) + (2 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (1 - 1)*3*0.2s) + (2 - 1)*0.2s);
 }
 .menu__category:nth-child(1) .menu__item:nth-child(3) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (1-1)*3*0.2s) + (3 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (1 - 1)*3*0.2s) + (3 - 1)*0.2s);
 }
 
 .menu__category:nth-child(2) .menu__item:nth-child(1) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (2-1)*3*0.2s) + (1 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (2 - 1)*3*0.2s) + (1 - 1)*0.2s);
 }
 .menu__category:nth-child(2) .menu__item:nth-child(2) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (2-1)*3*0.2s) + (2 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (2 - 1)*3*0.2s) + (2 - 1)*0.2s);
 }
 .menu__category:nth-child(2) .menu__item:nth-child(3) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (2-1)*3*0.2s) + (3 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (2 - 1)*3*0.2s) + (3 - 1)*0.2s);
 }
 
 .menu__category:nth-child(3) .menu__item:nth-child(1) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (3-1)*3*0.2s) + (1 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (3 - 1)*3*0.2s) + (1 - 1)*0.2s);
 }
 .menu__category:nth-child(3) .menu__item:nth-child(2) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (3-1)*3*0.2s) + (2 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (3 - 1)*3*0.2s) + (2 - 1)*0.2s);
 }
 .menu__category:nth-child(3) .menu__item:nth-child(3) {
   animation: menu-display 1s both;
-  animation-delay: calc(calc(-0.5s + (3-1)*3*0.2s) + (3 - 1)*0.2s);
+  animation-delay: calc(calc(0s + (3 - 1)*3*0.2s) + (3 - 1)*0.2s);
 }
 
 @keyframes menu-display {
